--- a/ass/finalgrid.css
+++ b/ass/finalgrid.css
@@ -136,7 +136,9 @@ body {
 .profile-image {
     width: 80px;
     height: 80px;
-    background: #ddd;
+    background-color: #ddd;
+    background-size: cover;  
+    background-position: center;  
     flex-shrink: 0;
 }
 
